--- a/style.css
+++ b/style.css
@@ -16,11 +16,29 @@ html, body {
 .header h3, .header p {
 	margin: 0 0 5px 0;
 }
+button {
+	margin: 20px 0;
+	font: bold 17px 'Libre Franklin', sans-serif;
+	padding: 5px 20px;
+	background: #3185EA;
+	color: white;
+	border: 1px solid transparent;
+	border-radius: 8px;
+	box-sizing: border-box;
+	cursor: pointer;
+}
+button:hover {
+	background: white;
+	color: #3185EA;
+	border-color: #3185EA;
+}
+button:focus {
+	outline: none;
+}
 .grid {
 	height: 574px;
 	width: 574px;
 	border: 4px solid black;
-	margin-top: 50px;
 	display: grid;
 	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
@@ -41,9 +59,10 @@ html, body {
 	border-bottom: 1px solid #000000bd;
 	font-size: 2.7em;
 	font-weight: bold;
+	padding: 5px;
+	cursor: default;
 }
 .focus {
-	padding: 5px;
 	background-clip: content-box;
 	box-shadow: inset 0 0 0 5px #f1ea5d;
 }
