--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+	box-sizing: border-box;
+}
 html, body {
 	font: 15px 'Libre Franklin', sans-serif;
 }
@@ -57,17 +60,20 @@ button:focus {
 	border-color: transparent;
 }
 .grid {
-	height: 574px;
-	width: 574px;
+	width: 95vw;
+	height: 95vw;
+	max-width: 574px;
+	max-height: 574px;
 	border: 4px solid black;
-	display: grid;
-	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+	display: flex;
+	flex-wrap: wrap;
 }
 .square {
 	border-right: 4px solid grey;
 	border-bottom: 4px solid grey;
-	display: grid;
-	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+	width: 33.333%;
+	display: flex;
+	flex-wrap: wrap;
 }
 .sq2, .sq5, .sq8 {
 	border-right: none;
@@ -76,12 +82,15 @@ button:focus {
 	border-bottom: none;
 }
 .tile {
+	display: block;
+	width: 33.333%;
 	border-right: 1px solid #000000bd;
 	border-bottom: 1px solid #000000bd;
 	font-size: 2.7em;
 	font-weight: bold;
 	padding: 5px;
 	cursor: default;
+	text-align: center;
 }
 .t2, .t5, .t8 {
 	border-right: none;
