--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body {
 	display: flex;
 	flex-flow: column;
 	align-items: center;
+	padding-bottom: 50px;
 }
 .header {
 	border-bottom: 4px solid #8080804f;
@@ -60,20 +61,19 @@ button:focus {
 	border-color: transparent;
 }
 .grid {
-	width: 95vw;
-	height: 95vw;
-	max-width: 574px;
-	max-height: 574px;
+	width: 98vw;
+	height: 98vw;
+	max-width: 810px;
+	max-height: 810px;
 	border: 4px solid black;
-	display: flex;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
 .square {
 	border-right: 4px solid grey;
 	border-bottom: 4px solid grey;
-	width: 33.333%;
-	display: flex;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
 .sq2, .sq5, .sq8 {
 	border-right: none;
@@ -82,8 +82,8 @@ button:focus {
 	border-bottom: none;
 }
 .tile {
-	display: block;
-	width: 33.333%;
+	height: 100%;
+	width: 100%;
 	border-right: 1px solid #000000bd;
 	border-bottom: 1px solid #000000bd;
 	font-size: 2.7em;
@@ -91,6 +91,10 @@ button:focus {
 	padding: 5px;
 	cursor: default;
 	text-align: center;
+	outline: none;
+}
+.tile:focus, .tile:hover, .tile:active {
+	outline: none;
 }
 .t2, .t5, .t8 {
 	border-right: none;
